--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -25,6 +25,9 @@
    <% @articles.each do |article| %>
      <tr>
        <td>
+         <% if article.sticky %>
+           <i class="icon-star"></i>
+         <% end %>
          <%= link_to article.title, article %>
        </td>
        <td> 
