--- a/app/views/layouts/_treninky.html.erb
+++ b/app/views/layouts/_treninky.html.erb
@@ -5,7 +5,7 @@
      <li>Pátek <span class="pull-right">18:00 - 19:00</span></li>
      <h5> Plavání dospělí </h5>
      <li>Pátek <span class="pull-right">19:00 - 20:00</span></li>
-     <h5> Lezecký výcvik </h5>
-     <li>Středa <span class="pull-right">18:00 - 19:00</span><br /><small>(sudá)</small> </li>
+     <%#<h5> Lezecký výcvik </h5>%>
+     <%#<li>Středa <span class="pull-right">18:00 - 19:00</span><br /><small>(sudá)</small> </li>%>
    </ul>
 </a>
