Clanek muze mit vice galerii.
Pokud je clanek napriklad souhrnem cinnosti za delsi obdobi, je logicke
aby mel vice fotogalerii.

--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -27,9 +27,9 @@
               <div class="row">
                 <div class="span4">
                   <p>
-                    <% if article.gallery.try(:photos) %>
+                    <% if article.galleries.first.try(:photos) %>
                       <%= link_to article do %>
-                        <%= image_tag article.gallery.photos.first.image.url(:thumbnail), :class => "float right" %>
+                        <%= image_tag article.galleries.first.photos.first.image.url(:thumbnail), :class => "float right" %>
                       <% end %>
                     <% end %>
                     <%= sanitize article.content.truncate(150), :tags => '' %>
