--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,4 @@
+<%= title "Nejbližší Akce"%>
 <table cellpadding="10" cellspacing="10" class="table table-striped">
   <% @events.each do |event| %>
     <tr>
