--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -8,3 +8,5 @@
 </p>
 
 <%= link_to "Více", @event.link %>
+<br />
+<%= link_to "Přihlášení na akce je možné pouze pro členy zde.", "http://akcevzs.herokuapp.com" %>
