--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,11 +1,18 @@
 <%= title "Nejbližší Akce"%>
+
+<% context_menu do %>
+   <% if can? :create, Event %>
+     <%= link_new new_event_path, 'Nová událost' %>
+   <% end %>
+<% end %>
+
 <table class="table table-striped">
-  <% @events.each do |event| %>
+  <% @pending_events.each do |event| %>
     <tr>
-      <th><%= l event.start_datetime, :format => :short %></th>
-      <td><%= event.event_type.capitalize %></td>
+      <th><%= l(event.start_datetime, :format => :short) if event.start_datetime %></th>
+      <td><%= event.event_type.try(:capitalize) %></td>
       <td><%= link_to event.name, event %></td>
-      <td><%= event.place.capitalize %></td>
+      <td><%= event.place %></td>
       <td>
         <!-- <%= link_to 'Přihlásit', '#', :class => "btn btn-primary btn-large" %> -->
       </td>
@@ -13,7 +20,7 @@
 </table>
 
 <p>
-<%= link_to "Přihlášení na akce je možné pouze pro členy zde.", "http://akcevzs.herokuapp.com" %>
+  <%= link_to "Přihlášení na akce je možné pouze pro členy zde.", "http://akcevzs.herokuapp.com" %>
   V budoucnu bude převedeno přímo na tyto stránky.
 </p>
 
@@ -22,10 +29,10 @@
 <table cellpadding="10" cellspacing="10" class="table table-striped">
   <% @done_events.each do |event| %>
     <tr>
-      <th><%= l event.start_datetime, :format => :short %></th>
-      <td><%= event.event_type.capitalize %></td>
+      <th><%= l(event.start_datetime, :format => :short) if event.start_datetime %></th>
+      <td><%= event.event_type.try(:capitalize) %></td>
       <td><%= link_to event.name, event %></td>
-      <td> <%= event.place.capitalize %> </td>
+      <td> <%= event.place%> </td>
       <td></td>
     </tr>
   <% end %>
