[FIXES #41764855] opraveni formulare pro upravu clenu
Ve formulari bylo pouzito stare volani formtasticu, opraveno na nove.

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -8,7 +8,7 @@
     <% end %>
     <%= render 'profiles/form', :f=>f %>
   <% end %>
-  <%= f.buttons do %>
+  <%= f.actions do %>
     <%= f.action :submit, :as => :button,
       :label => @user.id.nil? ? t('btn.register') : t('btn.save'),
       :button_html => { :class => 'btn btn-success' }   %>
