--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,18 +6,36 @@
    <% end %>
 <% end %>
 
-<table class="table table-striped">
-  <% @pending_events.each do |event| %>
-    <tr>
-      <th><%= l(event.start_datetime, :format => :short) if event.start_datetime %></th>
-      <td><%= event.event_type.try(:capitalize) %></td>
-      <td><%= link_to_unless event.link.blank?, event.name, event.link %><% unless event.description.blank? %>, <%= event.description %><% end %></td>
-      <td><%= event.place %></td>
-      <td>
-        <!-- <%= link_to 'Přihlásit', '#', :class => "btn btn-primary btn-large" %> -->
-      </td>
-  <% end %>
-</table>
+<% @pending_events.each do |event| %>
+  <div class="media well well-small well-white">
+    <div class="media-body">
+      <div class="pull-right">
+        <% if can? :edit, event %>
+          <%= link_to edit_event_path(event) do %>
+            Upravit
+          <% end %>
+          |
+        <% end %>
+        <%= link_to "http://akcevzs.herokuapp.com" do %>
+          Přihlášení
+        <% end %>
+      </div>
+      <h4 class="media-heading">
+        <%= l event.start_datetime.to_date, :format => :with_day %> -
+        <%= link_to_unless event.link.blank?, event.name, event.link %></h4>
+      <div class="row-fluid">
+        <div class="span2">
+          <%= l event.start_datetime, :format => :just_time %> - 20:00
+        </div>
+        <div class="span9">
+            <p>
+              <%= event.description_html %>
+            </p>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
 
 <p>
   <%= link_to "Přihlášení na akce je možné pouze pro členy zde.", "http://akcevzs.herokuapp.com" %>
@@ -26,14 +44,33 @@
 
 <h1> Proběhlé akce</h1>
 
-<table cellpadding="10" cellspacing="10" class="table table-striped">
-  <% @done_events.each do |event| %>
-    <tr>
-      <th><%= l(event.start_datetime, :format => :short) if event.start_datetime %></th>
-      <td><%= event.event_type.try(:capitalize) %></td>
-      <td><%= link_to event.name, event %></td>
-      <td> <%= event.place%> </td>
-      <td></td>
-    </tr>
-  <% end %>
-</table>
+<% @done_events.each do |event| %>
+  <div class="media well well-small well-white">
+    <div class="media-body">
+      <div class="pull-right">
+        <% if can? :edit, event %>
+          <%= link_to edit_event_path(event) do %>
+            Upravit
+          <% end %>
+          |
+        <% end %>
+        <%= link_to "http://akcevzs.herokuapp.com" do %>
+          Akce
+        <% end %>
+      </div>
+      <h4 class="media-heading">
+        <%= l event.start_datetime.to_date, :format => :with_day_and_year %> -
+        <%= link_to_unless event.link.blank?, event.name, event.link %></h4>
+      <div class="row-fluid">
+        <div class="span2">
+          <%= l event.start_datetime, :format => :just_time %> - 20:00
+        </div>
+        <div class="span9">
+            <p>
+              <%= event.description_html %>
+            </p>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
