--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -25,12 +25,13 @@
         <%= link_to_unless event.link.blank?, event.name, event.link %></h4>
       <div class="row-fluid">
         <div class="span2">
-          <%= l event.start_datetime, :format => :just_time %> - 20:00
+          <%= l event.start_datetime, :format => :just_time %> 
+          <% if event.end_datetime %>
+            - <%= l event.end_datetime, :format => :just_time %>
+          <% end %>
         </div>
         <div class="span9">
-            <p>
               <%= event.description_html %>
-            </p>
         </div>
       </div>
     </div>
@@ -63,12 +64,13 @@
         <%= link_to_unless event.link.blank?, event.name, event.link %></h4>
       <div class="row-fluid">
         <div class="span2">
-          <%= l event.start_datetime, :format => :just_time %> - 20:00
+          <%= l event.start_datetime, :format => :just_time %>
+          <% if event.end_datetime %>
+            - <%= l event.end_datetime, :format => :just_time %>
+          <% end %>
         </div>
         <div class="span9">
-            <p>
               <%= event.description_html %>
-            </p>
         </div>
       </div>
     </div>
