--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -27,7 +27,7 @@
               <div class="row">
                 <div class="span4">
                   <p>
-                    <% if article.galleries.first.try(:photos) %>
+                    <% unless article.galleries.first.try(:photos).blank?%>
                       <%= link_to article do %>
                         <%= image_tag article.galleries.first.photos.first.image.url(:thumbnail), :class => "float right" %>
                       <% end %>
