google apps verification

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="qC7Sivtmu4FlgBtGPo6LLbwdjEy7VIOUfrNswtO2QWM" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="MS VZS ČČK Třebíč je občanské sdružení jehož cílem je zajišťovat bezpečnost u vody, vodácké akce a jiné sportovní akce. Dále zajišťujeme přednášky a ukázky první předlékařské pomoci." />
