Pokusit se zobrazovat tabulku jen kdyz je co zobrazit

--- a/app/views/life_guarding_timespans/current.html.erb
+++ b/app/views/life_guarding_timespans/current.html.erb
@@ -4,4 +4,6 @@
   <%= link_show life_guarding_timespans_path, "Seznam hlídání" %>
 <% end %>
 
+<% if @life_guarding_timespan %>
 <%= render @life_guarding_timespan %>
+<% end %>
