--- a/app/views/life_guarding_timespans/_life_guarding_timespan.html.erb
+++ b/app/views/life_guarding_timespans/_life_guarding_timespan.html.erb
@@ -10,20 +10,20 @@
   </thead>
   <tbody>
     <% life_guarding_timespan.dates.each do |date| %>
-    <tr>
-      <th><%= l date, :format => :with_day %></th>
-      <% people = life_guarding_timespan.people_at(date) %>
-      <% (1..4).each do |position| %>
-        <% if people[position].blank? %>
-          <%= content_tag :td, :class => "life_guard", :id => "life_guard-#{date.to_s}-#{position}" do %>
-            <%= link_to "Prihlasit",
-              subscribe_life_guarding_timespan_life_guards_path(life_guarding_timespan,
-                                                                :date => date,
-                                                                :position => position),
-              :method => :put,
-              :confirm=> "Opravdu se chcete přihlásit na #{l date}? Odhlásit Vás může jen předseda.",
-              :remote => true %>
-          <% end %>
+      <tr <% if date.wday-1 == Date::DAYS_INTO_WEEK[:saturday]%> class="info" <%end%>>
+        <td><strong><%= l date, :format => :with_day %></strong></td>
+        <% people = life_guarding_timespan.people_at(date) %>
+        <% (1..4).each do |position| %>
+          <% if people[position].blank? %>
+            <%= content_tag :td, :class => "life_guard", :id => "life_guard-#{date.to_s}-#{position}" do %>
+              <%= link_to "Prihlasit",
+                subscribe_life_guarding_timespan_life_guards_path(life_guarding_timespan,
+                                                                  :date => date,
+                                                                  :position => position),
+                :method => :put,
+                :confirm=> "Opravdu se chcete přihlásit na #{l date}? Odhlásit Vás může jen předseda.",
+                :remote => true %>
+            <% end %>
         <% else %>
           <td>
             <%= people[position].map{|e| e.profile.full_name}.to_sentence%>
