--- a/app/views/life_guarding_timespans/current.html.erb
+++ b/app/views/life_guarding_timespans/current.html.erb
@@ -7,6 +7,8 @@
 Přihlašování na Hartvíkovice. Je dobré před přihlášením se domluvit s zodpovídajícím člověkem (záchranářem).
 Přihlašujte se s rozmyslem, ať to nemusíme ručně opravovat. Přihlašovat se mohou jen členi. Pokud se přihlásíte omylem na špatný termín, kontaktujte předsedu.
 
+Zapisujte se prosím od neděle do soboty. Výměna směn probíhá v sobotu večer, pokud se směny nedomluví jinak.
+
 <% if @life_guarding_timespan %>
   <%= render @life_guarding_timespan %>
 <% end %>
