--- a/app/views/life_guarding_timespans/_life_guarding_timespan.html.erb
+++ b/app/views/life_guarding_timespans/_life_guarding_timespan.html.erb
@@ -16,7 +16,7 @@
         <% (1..4).each do |position| %>
           <% if people[position].blank? %>
             <%= content_tag :td, :class => "life_guard", :id => "life_guard-#{date.to_s}-#{position}" do %>
-              <%= link_to "Prihlasit",
+              <%= link_to "Přihlásit",
                 subscribe_life_guarding_timespan_life_guards_path(life_guarding_timespan,
                                                                   :date => date,
                                                                   :position => position),
