Uprava textu k hlidani

--- a/app/views/life_guarding_timespans/current.html.erb
+++ b/app/views/life_guarding_timespans/current.html.erb
@@ -4,10 +4,9 @@
   <%= link_show life_guarding_timespans_path, "Seznam hlídání" %>
 <% end %>
 
-Přihlašování na Hartvíkovice. Je dobré před přihlášením se domluvit s zodpovídajícím člověkem (záchranářem).
-Přihlašujte se s rozmyslem, ať to nemusíme ručně opravovat. Přihlašovat se mohou jen členi. Pokud se přihlásíte omylem na špatný termín, kontaktujte předsedu.
-
-Zapisujte se prosím od neděle do soboty. Výměna směn probíhá v sobotu večer, pokud se směny nedomluví jinak.
+<p>Přihlašování na Hartvíkovice. Přihlašovat se mohou jen členi. Pokud budete potřebovat odhlásit, kontaktujte předsedu. Přihlašujte se s rozmyslem, ať to nemusíme ručně opravovat.</p>
+<p> Zapisujte se prosím od neděle do soboty. <br />Výměna směn probíhá v sobotu večer, pokud se směny nedomluví jinak. </p>
+<p> Ti kdo nejedete jako vedoucí na tábor, prosím přihlašujte se přednostně na termín tábora 13 - 20. 7.</p>
 
 <% if @life_guarding_timespan %>
   <%= render @life_guarding_timespan %>
