Prepsany navbar - ma pevnou sirku a skroluje se strankou

--- a/app/assets/stylesheets/vzs.css.scss
+++ b/app/assets/stylesheets/vzs.css.scss
@@ -1,4 +1,4 @@
-#vzs-left-menu { 
+#vzs-left-menu {
   margin-left: 35px;
   margin-right: 25px;
   padding-top: 50px;
@@ -12,6 +12,9 @@
     top:-124px;
 }
 
+.vzs-main-page {
+  padding-left:10px;
+}
 .hero-unit h1 {
   font-size: 40px;
 }
