Pridani VZS ID do vypisu clenu

--- a/app/views/profiles/_list_person.html.erb
+++ b/app/views/profiles/_list_person.html.erb
@@ -1,6 +1,7 @@
 <tr>
+  <td><%= profile.vzs_id %></td>
   <td><%= link_to profile.user.full_name, profile.user%></td>
   <td><%= profile.email %></td>
-  <td><%= profile.user_age%></td>
+  <td><%= profile.user_age %></td>
   <td><%= profile.telephone %></td>
 </tr>
