--- a/app/views/users/_index_tab.html.erb
+++ b/app/views/users/_index_tab.html.erb
@@ -5,6 +5,7 @@
             <table class="table">
               <thead>
                 <tr>
+                  <th class="span1"><%= Profile.human_attribute_name(:vzs_id)%></th>
                   <th class="span2"><%= User.human_attribute_name(:full_name)%></th>
                   <th class="span3"><%= Profile.human_attribute_name(:email) %></th>
                   <th class="span1"><%= Profile.human_attribute_name(:age) %></th>
