--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,7 +88,9 @@
               <% end %>
 
               <div class="row" id="vzs-page-content">
-                <%= yield %>
+                <div class="span9">
+                  <%= yield %>
+                </div>
               </div>
             </div>
           </div>
