--- a/app/views/life_guarding_timespans/current.html.erb
+++ b/app/views/life_guarding_timespans/current.html.erb
@@ -8,6 +8,8 @@
 <p> Zapisujte se prosím od neděle do soboty. <br />Výměna směn probíhá v sobotu večer, pokud se směny nedomluví jinak. </p>
 <p> Ti kdo nejedete jako vedoucí na tábor, prosím přihlašujte se přednostně na termín tábora 13 - 20. 7.</p>
 
+<%= render "modal_template"%>
+
 <% if @life_guarding_timespan %>
   <%= render @life_guarding_timespan %>
 <% end %>
